clang/test/BSC/Negative/Trait/GenericTrait/define_var_in_trait/define_var_in_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
  int a; // expected-error {{only function declarations can be trait member}}
};